# NBA-playoff-prediction

./: README.md  pyproject.toml
input/: df_all.csv
notebook/: lgb.ipynb
